# -Ollive-Take-Home-Assignment

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  docker-compose.yml
apps/chat-api/: Dockerfile  README.md  pyproject.toml
apps/chat-api/app/: cancel.py  db.py  main.py  models.py
apps/chat-api/app/routes/: chat.py  conversations.py  health.py
apps/ingestion/: Dockerfile  README.md  pyproject.toml
apps/ingestion/app/: main.py  metrics.py  pipeline.py  schema.py  worker.py
apps/web/: Dockerfile  README.md  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/c/[id]/: page.tsx
apps/web/app/conversations/: page.tsx
apps/web/components/: Chat.tsx  ConvList.tsx  ProviderPicker.tsx
apps/web/lib/: api.ts
infra/grafana/dashboards/: llm-observability.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/k8s/: README.md  chat-api.yaml  config.yaml  ingestion.yaml  observability.yaml  postgres.yaml  redis.yaml  web.yaml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
scripts/: load_test.py  seed.py
tests/: conftest.py  test_e2e_flow.py  test_ingestion_schema.py  test_redact.py
