[project]
name = "ollive-chat-api"
version = "0.1.0"
description = "Ollive chatbot API — multi-provider streaming + cancel/resume"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.7",
    "asyncpg>=0.29",
    "redis>=5.0",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "llm-sdk",
]

[tool.uv.sources]
llm-sdk = { path = "../../packages/llm_sdk", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
