[project]
name = "ollive-ingestion"
version = "0.1.0"
description = "Ollive inference log ingestion pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.7",
    "asyncpg>=0.29",
    "redis>=5.0",
    "prometheus-client>=0.20",
    "llm-sdk",
]

[tool.uv.sources]
llm-sdk = { path = "../../packages/llm_sdk", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
